--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,22 +1,38 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
+project_name: apker
 before:
   hooks:
     - go mod download
 builds:
-- env:
-  - CGO_ENABLED=0
+- 
+  env:
+    - CGO_ENABLED=0
+  ldflags:
+    - -X main.version={{.Version}}+{{.ShortCommit}}
+  goos:
+    - linux
+    - darwin
+    - freebsd
+    - windows
+  goarch:
+    - amd64
+
 archives:
 - replacements:
     darwin: Darwin
     linux: Linux
+    freebsd: Freebsd
     windows: Windows
-    386: i386
-    amd64: x86_64
+
 checksum:
   name_template: 'checksums.txt'
+  algorithm: sha256
+
+signs:
+  - artifacts: checksum
+
 snapshot:
   name_template: "{{ .Tag }}-next"
+
 changelog:
   sort: asc
   filters:
